gantt break on cancel in popup and  3 dot issues fix

--- a/src/app/task-allocation/timeline/timeline.component.css
+++ b/src/app/task-allocation/timeline/timeline.component.css
@@ -819,3 +819,8 @@ div.sticky {
   color: #ffffff !important;
   border: 1px solid #db1721  !important;
 }
+
+.ganttOverlayIcon {
+  cursor: pointer;
+  padding: 0 10px;
+}
